--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,27 @@
 ---
 ---
 
+@inproceedings{Steinberg.Solovey.25,
+  author    = {Roy Steinberg and
+               Kiril Solovey},
+  title     = {From configuration-space clearance to feature-space margin: Sample complexity in learning-based collision detection},
+  booktitle = {{IEEE} International Conference on Robotics and Automation},
+  publisher = {{IEEE}},
+  year      = {2025},
+  abbr={ICRA},
+  %bibtex_show={true},
+}
+
+@inproceedings{Tubul.ea.25,
+  author    = {Sapir Tubul and Aviv Tamar and Kiril Solovey and Oren Salzman},
+  title     = {Impossibility of Self-Organized Aggregation without Computation},
+  booktitle = {{IEEE} International Conference on Robotics and Automation},
+  publisher = {{IEEE}},
+  year      = {2025},
+  abbr={ICRA},
+  bibtex_show={true},
+}
+
 @article{Alpert.ea.23,
   author       = {Shmuel David Alpert and
                   Kiril Solovey and
@@ -10,6 +31,16 @@
   journal      = {CoRR},
   volume       = {abs/2309.06113},
   year         = {2023},
+  abbr={arXiv}
+}
+
+@article{Steinberg.Solovey.24,
+  author       = {Roy Steinberg and
+                  Kiril Solovey},
+  title        = {Impossibility of Self-Organized Aggregation without Computation},
+  journal      = {CoRR},
+  volume       = {abs/2501.00390},
+  year         = {2024},
   abbr={arXiv}
 }
 
@@ -35,6 +66,8 @@
   year      = {2023},
   journal = {Autonomous Agents and Multiagent Systems},
   abbr={JAAMAS},
+  selected={true},
+  award={Best students paper award (finalist), Transportation Science and Logistics, {INFORMS}},
   %bibtex_show={true},
 }
 
