Update papers.bib another small fix

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
   publisher = {{IEEE}},
   year      = {2025},
   abbr={ICRA},
+  selected={true},
   %bibtex_show={true},
 }
 
@@ -19,7 +20,7 @@
   publisher = {{IEEE}},
   year      = {2025},
   abbr={ICRA},
-  bibtex_show={true},
+  %bibtex_show={true},
 }
 
 @article{Alpert.ea.23,
