--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@inproceedings{Hassidof.ea.25,
+  author       = {Yaniv Hassidof and Tom Jurgenson and
+                  Kiril Solovey},
+  title        = {Train-Once Plan-Anywhere Kinodynamic Motion Planning via Diffusion Trees},
+  booktitle   = {Conference on Robot Learning},
+  year      = {2025},
+  abbr={CoRL},
+  selected={true}
+}
+
 @article{Alpert.ea.25,
   author       = {Shmuel David Alpert and
                   Kiril Solovey and
@@ -13,15 +23,15 @@
   selected={true}
 }
 
-@article{Panasoff.Solovey.25,
+@inproceedings{Panasoff.Solovey.25,
   author       = {Itai Panasoff and
                   Kiril Solovey},
   title        = {Effective Sampling for Robot Motion Planning Through the Lens of
  Lattices},
-  journal      = {arXiv preprint:2502.04908},
+  booktitle      = {Robotics: Science and Systems},
   year         = {2025},
   selected={true},
-  abbr={arXiv}
+  abbr={RSS}
 }
 
 @inproceedings{Steinberg.Solovey.25,
