--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
   booktitle   = {Conference on Robot Learning},
   year      = {2025},
   abbr={CoRL},
-  selected={true}
+  selected={true},
+  award={Israeli Association for Automatic Control (IAAC) GSC award},
 }
 
 @article{Alpert.ea.25,
