housekeeping. yoni profile. avishav and max pubs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,24 @@
 ---
 ---
 
+@article{Engle.ea.25,
+  author       = {Avishav Engle and Andrey Zhitnikov and Oren Salzman and Omer Ben-Porat and  Kiril Solovey},
+  title        = {Effective Game-Theoretic Motion Planning via Nested Search},
+  journal   = {arXiv preprint},
+  year      = {2025},
+  abbr={arXiv},
+  selected={true},
+}
+
+@article{Fainkich.ea.25,
+  author       = {Maximillian Fainkich and Kiril Solovey and Anna Clarke},
+  title        = {Motion Planning for Safe Landing of a Human-Piloted Parafoil},
+  journal   = {arXiv preprint},
+  year      = {2025},
+  abbr={arXiv},
+  selected={true},
+}
+
 @inproceedings{Hassidof.ea.25,
   author       = {Yaniv Hassidof and Tom Jurgenson and
                   Kiril Solovey},
