--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -118,7 +118,7 @@
   journal = {Autonomous Agents and Multiagent Systems},
   abbr={JAAMAS},
   selected={true},
-  award={Best students paper award (finalist), Transportation Science and Logistics, {INFORMS}},
+  award={Best student paper award (finalist), Transportation Science and Logistics, {INFORMS}},
   %bibtex_show={true},
 }
 
